fixed submit alignment on club website

--- a/club.css
+++ b/club.css
@@ -75,3 +75,9 @@ ol li::before {
 .imputer{
     margin: 0.5vh;
 }
+.text-left{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
